# fightsafe-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  environment.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_task.md  feature_request.md  research_task.md
.github/workflows/: ci.yml  commitlint.yml  paper.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
annotations/: case_a_knockdown.json  case_b_tap.json  case_c_limb_anomaly.json  case_d_post_choke_confusion.json  case_e_manifest_superiority.json  case_f_referee_errors.json
configs/: case_studies.yaml  default.yaml  framework.yaml  llm.yaml  risk_fusion.yaml  risk_rules.yaml
dashboard/: .env.example  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
data/: README.md  paper2_human_study.csv
data/FightSafeBench/: dataset_statistics.json  events.csv  trim_manifest.json
data/FightSafeBench/annotations/: jedi_submissions_alumno001.xlsx
data/raw/: .gitkeep
data/repro/: README.md
data/tapko/annotations/: jedi_submissions.json
data/tapko/examples/: tapko_example_full.json  tapko_example_minimal.json
docs/: ESWA2026_REPRODUCIBILITY.md  ESWA2026_TRACEABILITY_MATRIX.md  ISWA2026_REPRODUCIBILITY.md  ISWA2026_TRACEABILITY_MATRIX.md  JSS2026_REPRODUCIBILITY.md  JSS2026_TRACEABILITY_MATRIX.md  REPRODUCIBILITY.md  SINICA2026_REPRODUCIBILITY.md  SINICA2026_TRACEABILITY_MATRIX.md  annotation.md  architecture.md  clean-project-archive.md  commit-convention.md  contributing.md  dataset.md  datasets.md  engineering-standards.md  evaluation.md  experiments-mvp.md  framework.md  internet-video-codecs.md  methodology-imrad.md  mvp-demo.md  ollama.md  q1-framework.md  release_checklist.md  research-contributions.md  research-metadata.md  roadmap.md  security-and-data-policy.md  tapko_annotation.md  tapko_dataset_plan.md  testing-policy.md  troubleshooting.md
docs/figures/: generate_paper_figures.py
examples/: safety_event_ko_001.json
notebooks/: 01_mvp_exploration.ipynb
runs/case_studies/ablation_summary/: ablation_all_runs.csv
scripts/: README.md  build_fightsafe_bench.py  export_eswa2026_tables.py  export_fusion2026_assets.py  export_iswa2026_tables.py  export_sinica2026_tables.py  extract_benchmark_features.py  generate_paper_assets.py  reproduce_all.sh  reproduce_eswa2026.sh  reproduce_fusion2026.sh  reproduce_iswa2026.sh  reproduce_sinica2026.sh  reproduce_sports.sh  verify_paper_outputs.py
scripts/lib/: common.sh
src/fightsafe_ai/: __init__.py  __version__.py  _metadata.py  cli.py  exceptions.py  logutil.py
src/fightsafe_ai/action/: __init__.py  base.py  defense.py  punch_kick.py  temporal_classifier.py
src/fightsafe_ai/annotation/: __init__.py  llm_assist.py  loader.py  schema.py  tapko_schema.py  validator.py
src/fightsafe_ai/anomaly/: __init__.py  base.py  fall_detector.py  inactivity_detector.py  limb_anomaly.py  surrender_detector.py
src/fightsafe_ai/api/: __init__.py  app.py  serialization.py  session_worker.py
src/fightsafe_ai/benchmark/: __init__.py  feature_extraction.py
src/fightsafe_ai/case_studies/: __init__.py  clip.py  runner.py  tables.py
src/fightsafe_ai/config/: __init__.py  framework.py  loader.py
src/fightsafe_ai/datasets/: __init__.py  boxingvi.py  coco_loader.py  registry.py  schemas.py  yolo_pose_loader.py
src/fightsafe_ai/db/: __init__.py  live_dashboard.py  models.py  repositories.py  routes.py  schemas.py  session.py
src/fightsafe_ai/evaluation/: __init__.py  ablation.py  boxingvi_baselines.py  boxingvi_batch_eval.py  boxingvi_evaluator.py  boxingvi_skeleton_runner.py  boxingvi_strike_detector.py  case_study_evaluation.py  event_matching.py  event_metrics.py  metrics.py  risk_ablation.py  summarize_sweeps.py  tapko_evaluator.py  tapko_summarize_run.py
src/fightsafe_ai/events/: __init__.py  tap_detector.py  vulnerability_detector.py
src/fightsafe_ai/features/: __init__.py  anomaly.py  biomechanics.py  temporal.py
src/fightsafe_ai/hci/: __init__.py  alert_manager.py  alert_types.py  alerts.py  referee_messages.py
src/fightsafe_ai/keypoints/: __init__.py  io.py
src/fightsafe_ai/live/: __init__.py  event_bus.py  gpu_monitor.py  live_overlay.py  live_pipeline.py  live_runner.py  live_sensitivity.py  performance.py  tapko_live_events.py  video_source.py
src/fightsafe_ai/llm/: __init__.py  (+11 more)
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_cli_e2e.py  test_cli_subprocess_workflows.py
tests/fixtures/: __init__.py  mvp_runs.py  synthetic.py  synthetic_video.py
tests/integration/: conftest.py  test_qa_module.py  test_synthetic_keypoints_feature_risk_report.py  test_tiny_video_frame_extract.py
tests/support/: __init__.py  isolated.py  subprocess_env.py
tests/unit/: conftest.py  test_action_synthetic.py  test_annotation.py  test_anomaly_synthetic.py  test_api_app.py  test_api_dashboard.py  test_artifact_io_extra.py  test_backend_benchmark.py  test_biomechanics.py  test_biomechanics_pure.py  test_biomechanics_synthetic.py  test_boxingvi.py  test_boxingvi_baselines.py  test_boxingvi_batch_eval.py  test_boxingvi_evaluator.py  test_boxingvi_skeleton_runner.py  test_boxingvi_strike_detector.py  test_case_studies.py  test_case_study_evaluation.py  test_cli_output_helpers.py  test_cli_smoke.py  test_cli_workflows.py  test_config_loader.py  test_dashboard_qa.py  test_dataset_checks_unit.py  test_datasets_registry.py  test_device_runtime.py  test_downloader_print.py  test_evaluation_metrics.py  test_event_matching.py  test_events.py  test_external_wrappers_mocked.py  test_features_smoke.py  test_formal_risk_fusion.py  test_framework_factory.py  test_framework_pure.py  test_gpu_monitor.py  test_hci.py  test_hci_alert_types_shim.py  test_hci_messages.py  (+64 more)
tools/: check_paper_update.py  generate_ablation_paper_assets.py  generate_paper_assets.py  generate_quantitative_observations_tex.py
(+159 files in other folders)
